@@ -12,10 +12,11 @@ Amnon Aaronsohn     (ActiveSync)
 Pau Aliagas         <pau@smsarena.com>
 Michael Banck       (Debian package maintainer, testing)
 Michael Bell        <michael.bell@web.de>
-Anton D. Kachalov   (Nokia ConML support)
-Benedykt Kroplewski <benedykt@age.pl>
+Conrad Irwin        (performance fixes)
 Aymerick Jehanne    <aymerick@jehanne.org>
 Ossi Jormakka       (Ixonos Plc., ActiveSync)
+Anton D. Kachalov   (Nokia ConML support)
+Benedykt Kroplewski <benedykt@age.pl>
 Jeremy Lainé        (helped with cmake on Win32)
 Petr Písař          (RedHat/Fedora package maintainer)
 Boaz Yaniv          (MS Visual Studio fixes)
